--- a/lib/dedalo/menu/css/menu.less
+++ b/lib/dedalo/menu/css/menu.less
@@ -316,12 +316,16 @@ background-color: #FFFF00;
 	/* LOGGED USERNAME
 	------------------------------------------------------- */
 	#menu_wrapper .logged_user_name {
-		color:#c9c9c9;
+		color: #c9c9c9;
 		float: left;
 		margin-left: 10px;
 		margin-right: 10px;
 		top: 6px;
-		cursor: default;
+		cursor: pointer;
+
+		&:hover {
+			color: #F9F9F9;
+		}
 	}
 
 
