Minor clean code

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -850,9 +850,9 @@
 					top: 5px;
 				}
 				span.css_span_dato {
-					cursor: pointer;
-					padding: 2px;
-					padding-left: 15px;
+					// cursor: pointer;
+					// padding: 2px;
+					// padding-left: 15px;
 				}
 				
 
