Change the id of the section_group_div for selected by js

--- a/lib/dedalo/section_group_div/html/section_group_div_edit.phtml
+++ b/lib/dedalo/section_group_div/html/section_group_div_edit.phtml
@@ -4,7 +4,7 @@
 	
 	print "<!-- SECTION GROUP DIV [tipo:$tipo] $label -->";
 
-	print "<div id=\"$identificador_unico\" class=\"wrap_section_group_div wrap_section_group_div_{$tipo} sgc_{$modo}\" >";	
+	print "<div id=\"$section_group_id\" class=\"wrap_section_group_div wrap_section_group_div_{$tipo} sgc_{$modo}\" >";	
 	
 
 	# CONTENIDO (INPUT)
