Fix tool_inspector_log css max-width in tool_indexation

--- a/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
+++ b/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
@@ -234,7 +234,21 @@ li.tool_indexation_index_list_termino {
 	}
 	
 	
+/* INSPECTOR
+------------------------------------------------------ */
 
+	#inspector_log {
+		width: auto;
+		max-width: 20%;
+		min-width: 250px;
+		min-height: 2.5em;
+		//background-color: #77FDDB;
+
+		-webkit-user-select: none;  /* Chrome all / Safari all */
+		-moz-user-select: none;     /* Firefox all */
+		-ms-user-select: none;      /* IE 10+ */
+		user-select: none;          /* Likely future */  
+	}
 
 
 
