--- a/lib/dedalo/tools/tool_lang/css/tool_lang.less
+++ b/lib/dedalo/tools/tool_lang/css/tool_lang.less
@@ -168,24 +168,7 @@ DIV.nParagrapsRight_div {
 }
 
 
-.tool_lang_inspector_log {
-	/*
-	float: right;
-	width: 180px;
-	margin-right: 10px;
-	*/
-	/*
-	text-align: right;
 
-	position: fixed;
-    right: 0;
-    margin-right: 0;
-    top: 29px;
-    opacity: 0.9;
-    width: 37%;
-	min-height: 1.3em;
-	//background-color: #AFEBFF */
-}
 
 .wrap_tool_lang_page label.css_label.tooltips{
 	max-width: 250px;
@@ -193,11 +176,21 @@ DIV.nParagrapsRight_div {
 
 
 
+/* INSPECTOR
+------------------------------------------------------ */
 
+	#inspector_log {
+		width: auto;
+		max-width: 20%;
+		min-width: 250px;
+		min-height: 2.5em;
+		//background-color: #77FDDB;
 
-
-
-
+		-webkit-user-select: none;  /* Chrome all / Safari all */
+		-moz-user-select: none;     /* Firefox all */
+		-ms-user-select: none;      /* IE 10+ */
+		user-select: none;          /* Likely future */  
+	}
 
 
 
