Added ar_groupers_models section

--- a/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
+++ b/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
@@ -127,15 +127,12 @@ body {
 	.html_page_wrap_tool_cataloging .toponymy_list li {
 		width: 100%;
 	}
-	
-
-
 
 
 
 
 // tool list paginator
-	#section_filter_paginator {
+	#section_paginator {
 		padding-top: 0.5em;
 	}
 
